feat: Phase 0 - Stabilize (fix crashes and data corruption)
- Fix GUARD_* macros to check null before dereference (C-1, C-2)
  - Added NULL_CHECK macro to all GUARD_* variants in Main.h
  - Returns SQL_INVALID_HANDLE before any handle dereference

- Add null checks at all ODBC entry points (C-3)
  - SQLCancel, SQLFreeEnv, SQLDisconnect, SQLGetEnvAttr, SQLSetEnvAttr
  - SQLFreeHandle, SQLAllocHandle, SQLCopyDesc
  - Fixed SQLCopyDesc null check ordering (was after GUARD_HDESC)

- Fix sprintf buffer overflow in debug builds (C-6)
  - Replaced sprintf with snprintf in OdbcConnection.cpp
  - Increased debug buffer from 256 to 512 bytes

- Replace 64 C-style exception casts across 12 files (C-7)
  - Changed catch(std::exception&) + (SQLException&) downcast
    to direct catch(SQLException&) - type-safe, no UB

- Add 90 null handle crash prevention tests (T-9)
  - 28 MSTest tests in Tests/Cases/NullHandleTests.cpp
  - 62 GTest tests in Tests/test_null_handles.cpp
  - Total tests: 112 (all passing)

- Update FIREBIRD_ODBC_MASTER_PLAN.md to v1.2

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -21,6 +21,7 @@ include(GoogleTest)
 add_executable(firebird_odbc_tests
     test_connection.cpp
     test_main.cpp
+    test_null_handles.cpp
 )
 
 # Link with Google Test and the ODBC library
